--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="author" content="Seema">
     <meta name="keywords" content="HTML, CSS">
     <meta name="description" content="Apple clone">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="index.css">
     <link rel="shortcut icon" type="x-icon" href="./favicon.ico">
     <script src="https://kit.fontawesome.com/e6de121526.js" crossorigin="anonymous"></script>
     <title>Apple Clone website</title>
